--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,10 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2rem;
-    margin:40px;
+    padding: 0 1rem;
+    margin:10px;
 }
 
 .navbar__img{
-    width: 2rem;
+    width: 4rem;
+}
+
+.navbar__links{
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+   
 }
