--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -13,6 +13,20 @@
 .navbar__links{
     width: 30%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
    
+}
+.hebergement{
+    border-top: transparent 3px solid;
+}
+.hebergement:hover{
+    cursor: pointer;
+    color: #106ffc;
+    border-top: #106ffc 3px solid;
+
+}
+
+.activités:hover{
+    cursor: pointer;
+    color: #106ffc;
 }
