--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    margin: auto;
+    max-width: 1400px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+   }
