--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -13,30 +13,47 @@
 
 .firstDiv{
     display: flex;
+    align-items: center;
+   gap: 10px;
     width: 10.8rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
-    border: 2px black solid;
+    border: 2px #D9D9D9 solid;
     border-radius: 25px;
  
 }
+
+.billet{
+    color: #0065FC;
+}
+
+
 
 .secondDiv{
     display: flex;
     width: 8.3rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
-    border: 2px black solid;
+    border: 2px #D9D9D9 solid;
     border-radius: 25px;
 }
+
+.personne{
+    color: #0065FC;
+}
+
 
 .thirdDiv{
     display: flex;
     width: 10.6rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
-    border: 2px black solid;
+    border: 2px #D9D9D9 solid;
     border-radius: 25px;
+}
+
+.coeur{
+    color: #0065FC;
 }
 
 .forthDiv{
@@ -44,10 +61,32 @@
     width: 10.4rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
-    border: 2px black solid;
+    border: 2px #D9D9D9 solid;
     border-radius: 25px;
+}
+
+.feu{
+    color: #0065FC;
 }
 .description{
     padding-top: 2rem;
 }
 
+/* ================================================================================================ Hover ============================================================================================== */
+
+.firstDiv:hover{
+    background: #DEEBFF;
+    cursor: pointer;
+}
+.secondDiv:hover{
+    background: #DEEBFF;
+    cursor: pointer;
+}
+.thirdDiv:hover{
+    background: #DEEBFF;
+    cursor: pointer;
+}
+.forthDiv:hover{
+    background: #DEEBFF;
+    cursor: pointer;
+}
