--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -31,6 +31,8 @@
 
 .secondDiv{
     display: flex;
+    align-items: center;
+    gap: 10px;
     width: 8.3rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
