--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -47,6 +47,8 @@
 
 .thirdDiv{
     display: flex;
+    align-items: center;
+    gap: 10px;
     width: 10.6rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
