--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -62,6 +62,8 @@
 
 .forthDiv{
     display: flex;
+    align-items: center;
+    gap: 10px;
     width: 10.4rem;
     height: 3.1rem;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
