--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -15,8 +15,8 @@
     display: flex;
     align-items: center;
    gap: 10px;
-    width: 10.8rem;
-    height: 3.1rem;
+   width: auto;
+   height: auto;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
     border: 2px #D9D9D9 solid;
     border-radius: 25px;
@@ -33,8 +33,8 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    width: 8.3rem;
-    height: 3.1rem;
+    width: auto;
+    height: auto;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
     border: 2px #D9D9D9 solid;
     border-radius: 25px;
@@ -49,8 +49,8 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    width: 10.6rem;
-    height: 3.1rem;
+    width: auto;
+    height: auto;
     padding: 0.25rem 1.1rem 0.25rem 1.1rem;
     border: 2px #D9D9D9 solid;
     border-radius: 25px;
