--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -75,10 +75,15 @@
 .feu{
     color: #0065FC;
 }
-.description{
-    padding-top: 2rem;
-}
 
+
+
+.headerBottom{
+    width: 100%;
+    display: flex;
+    align-items: center
+   
+}
 /* ================================================================================================ Hover ============================================================================================== */
 
 .firstDiv:hover{
