--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -18,6 +18,53 @@ h1{
 .divHeader{
     margin-top: 1.88rem;
 }
+
+
+
+
+/* Mise en forme de la barre de recherches */
+form{
+    margin-top: 2.19rem;
+    width: 23.5625rem;
+    height: 3.0625rem;
+    display: flex;
+    align-items: center;
+
+    border: 1px solid #F2F2F2;
+     border-radius: 0.9375rem;
+     background: #F2F2F2;
+   
+}
+.location{
+    height: 1.125rem;
+    width: 3.0625rem;
+   
+}
+
+
+input{
+    text-align: center;
+    width: 100%;
+    height: 3.0625rem;
+    border: transparent;
+    font-family: Raleway;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+button{
+    width: 6.25rem;
+    height: 3.0625rem;
+    background: #0065FC;
+    color: #FFFFFF ;
+    border: #0065FC;
+    border-radius: 0rem 0.9375rem 0.9375rem 0rem;
+    cursor: pointer;
+}
+
+/* Mise en forme des filtres */
 .filtre{
     display: flex;
     gap: 15px;
@@ -39,7 +86,6 @@ h1{
 .billet{
     color: #0065FC;
 }
-
 
 
 .secondDiv{
@@ -95,6 +141,14 @@ h1{
     display: flex;
     align-items: center
    
+}
+
+.filtre p{
+    font-family: Raleway;
+    font-size: 1.0625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 /* ================================================================================================ Hover ============================================================================================== */
 
