--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -85,6 +85,8 @@ button{
 
 .billet{
     color: #0065FC;
+    width: 1.375rem;
+    height: 1.375rem;
 }
 
 
@@ -101,6 +103,8 @@ button{
 
 .personne{
     color: #0065FC;
+    width: 1.375rem;
+    height: 1.375rem;
 }
 
 
@@ -117,6 +121,8 @@ button{
 
 .coeur{
     color: #0065FC;
+    width: 1.375rem;
+    height: 1.375rem;
 }
 
 .forthDiv{
@@ -132,6 +138,8 @@ button{
 
 .feu{
     color: #0065FC;
+    width: 1.375rem;
+    height: 1.375rem;
 }
 
 
@@ -149,6 +157,34 @@ button{
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+
+/* Mise en forme headerBottom */
+
+.headerBottom{
+    margin-top: 2.19rem;
+}
+
+.headerBottom p{
+
+    font-family: Raleway;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 0.62rem;
+}
+
+.headerBottomIcon{
+    border: 1px solid #D9D9D9;
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: #0065FC;
+    display: flex;
+    align-items: center;
+    padding: 0.3rem;
 }
 /* ================================================================================================ Hover ============================================================================================== */
 
