--- a/src/styles/SecondSection.css
+++ b/src/styles/SecondSection.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+
 .hebergements{
     display: flex;
     margin-top: 2.19rem;
@@ -6,11 +8,19 @@
 }
 
 .premiereSection{
-   
     width: auto;
     height: auto;
     background-color: #F2F2F2;
     margin-right: 2.5rem;
+}
+
+.premiereSection h2{
+    padding: 1.875rem;
+    font-family: Raleway;
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 
