--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,8 +1,9 @@
 .LogementCard{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: 10px;
+    margin: 1.88rem 0;
  
 }
 
