--- a/src/styles/ActivityCard.css
+++ b/src/styles/ActivityCard.css
@@ -1,20 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 
+
+.ActivityLogementDiv{
+    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.10);
+    border-radius: 1.25rem;
+    margin-top: 1.88rem;
+}
 .ActivityLogementDiv img{
     width: 18.59rem;
     height: 27.43rem;
     border-top-right-radius: 1.25rem;
     border-top-left-radius: 1.25rem;
+    object-fit: cover;
 }
-
-.activityCard{
-    display: flex;
-    justify-content: space-between;
-    border-bottom-right-radius: 1.25rem;
-    border-bottom-left-radius: 1.25rem;
-    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.10);
-}
-
 
 .ActivityLogementDiv h3{
     font-family: Raleway;
@@ -22,4 +20,16 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    padding: 1.25rem 1.19rem;
 }
+
+.activityCard{
+    display: flex;
+    align-items: flex-start;
+    gap: 1.88rem;
+    border-bottom-right-radius: 1.25rem;
+    border-bottom-left-radius: 1.25rem;
+}
+
+
+
