ActivitySection - mise en forme définitive

--- a/src/styles/ActivityCard.css
+++ b/src/styles/ActivityCard.css
@@ -31,5 +31,7 @@
     border-bottom-left-radius: 1.25rem;
 }
 
-
-
+/* ============================ Hover ====================== */
+.ActivityLogementDiv{
+    cursor: pointer;
+}
