--- a/src/styles/SecondSection.css
+++ b/src/styles/SecondSection.css
@@ -29,7 +29,7 @@
 .secondSection{
     width: auto;
     height: auto;
-    background-color: bisque;
+    background-color: #F2F2F2;
     border-radius: 0.9375rem;
     padding: 1.88rem;
 }
