média queries pour tablettes

--- a/src/styles/SecondCard.css
+++ b/src/styles/SecondCard.css
@@ -59,4 +59,16 @@
 }
 
 
+/* ========================== média quéries tablette =================== */
 
+
+
+
+@media screen and (min-width:768px) and (max-width:1024px){
+    .LogementCardTwo{
+        display: flex;
+        flex-direction: row;
+        
+    }
+  
+    }
