--- a/src/styles/ActivitySection.css
+++ b/src/styles/ActivitySection.css
@@ -3,3 +3,14 @@
     height: 35rem;
     margin: 2.19rem 0;
 }
+
+
+
+
+@media screen and (min-width:768px) and (max-width:1024px){
+    .activitySection{
+        width: 54rem;
+        height: 20.6rem;
+    }
+  
+    }
